--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "next": "12.2.4",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.8",
+    "sass": "^1.54.3"
   },
   "devDependencies": {
+    "@types/node": "^18.6.4",
+    "@types/react": "^18.0.16",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
+    "eslint-config-next": "12.2.4",
+    "typescript": "^4.7.4"
   }
 }
